objects/PTI_Program_Data_Header__c.object
<CustomObject>
    <fields>
        <fullName>PTI_AC_Model__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Aircraft_Type__c</formula>
        <label>A/C Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Config_Value__c</fullName>
        <formula>&quot;1&quot;</formula>
        <label>Config Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Data_Owner__c</fullName>
        <formula>PTI_P_L_Approval__r.L2I_Approval_Deal_Opportunity__r.Owner.LastName+ &#39;, &#39; +
PTI_P_L_Approval__r.L2I_Approval_Deal_Opportunity__r.Owner.FirstName</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Discount_Type__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Discount Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTI_Error_Log__c</fullName>
        <label>Error Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PTI_Finance_Approval_Date__c</fullName>
        <label>Finance Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PTI_Finance_Approval_Flag__c</fullName>
        <formula>NOT(ISBLANK(PTI_Finance_Approval_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Approval Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTI_Finance_Last_Updated_By__c</fullName>
        <defaultValue>&quot;walter.blauw@panasonic.aero&quot;</defaultValue>
        <label>Finance Last Updated By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PTI_Firm_Qty__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_Firm_Buy_AC_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTI_Lead_ID__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_Opportunity_ID__c</formula>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Marketing_Approval_Date__c</fullName>
        <label>Marketing Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PTI_Marketing_Approval_Flag__c</fullName>
        <formula>NOT(ISBLANK(PTI_Marketing_Approval_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Approval Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTI_Operator__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_AC_Operator__r.L2I_Operator_Number__c + &#39;-&#39;+
PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_AC_Operator__r.Name</formula>
        <label>Operator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Opportunity__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_Opportunity_Number__c</formula>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_PO_Provider__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_PO_Issuer__r.Name</formula>
        <label>PO Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_P_L_Approval__c</fullName>
        <label>P&amp;L Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipLabel>P&amp;L Program Data Headers</relationshipLabel>
        <relationshipName>P_L_Program_Data_Headers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PTI_P_L_Sales_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L Sales Opportunity</label>
        <referenceTo>L2I_P_L_Sales_Opportunity__c</referenceTo>
        <relationshipLabel>P&amp;L Program Data Headers</relationshipLabel>
        <relationshipName>P_L_Program_Data_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PTI_Primary_Group__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.Proposed_PMO_Group__r.Name</formula>
        <label>PMO Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Primary_PA__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.Proposed_Program_Administrator__r.LastName + &#39;, &#39; +PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.Proposed_Program_Administrator__r.FirstName</formula>
        <label>Primary PA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Primary_PM__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.Proposed_Program_Manager__r.LastName+&#39;, &#39;+ PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.Proposed_Program_Manager__r.FirstName</formula>
        <label>Primary PM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Process_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTI_Processed_Date__c</fullName>
        <label>Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PTI_Program_Config_Desc__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_Aircraft_Type__r.L2I_Aircraft_Type__c</formula>
        <label>Program Config Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Program_Description__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.PTI_Sales_Opp_Description__c</formula>
        <label>Sales Opp Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Program_Key__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_Opportunity_Number__c</formula>
        <label>Program Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Program_Method__c</fullName>
        <formula>&quot;A/C Development&quot;</formula>
        <label>Program Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Program_Type__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Fit_Type__c</formula>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Quote__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.PL_Quote_Lookup__r.Name</formula>
        <label>Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_System_Type__c</fullName>
        <formula>PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.PrimarySystemTypeName__c</formula>
        <label>System Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_To_Oracle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To Oracle</label>
        <type>Checkbox</type>
    </fields>
    <label>P&amp;L Program Data Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PDH-{0000000}</displayFormat>
        <label>P&amp;L Program Data Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P&amp;L Program Data Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>